<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DataEntry"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="50dp"
                android:text="Insert Records :"
                android:textColor="@color/black"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <EditText
                android:id="@+id/dateValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="5dp"
                android:hint="dd/mm/yy"
                android:inputType="text"
                android:padding="7dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <EditText
                android:id="@+id/timeValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="5dp"
                android:hint="hh : mm"
                android:inputType="text"
                android:padding="7dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/time" />

            <TextView
                android:id="@+id/systolic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/systolic"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/time" />

            <EditText
                android:id="@+id/systolicValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="5dp"
                android:hint="number"
                android:inputType="number"
                android:padding="7dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/systolic" />

            <TextView
                android:id="@+id/diastolic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/diastolic"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/systolic" />

            <EditText
                android:id="@+id/diastolicValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="5dp"
                android:hint="number"
                android:inputType="number"
                android:padding="7dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/diastolic" />

            <TextView
                android:id="@+id/heartRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/heart_rate"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/diastolic" />

            <EditText
                android:id="@+id/heartRateValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="5dp"
                android:hint="number"
                android:inputType="number"
                android:padding="7dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/heartRate" />

            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/comment"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/heartRate" />

            <EditText
                android:id="@+id/commentValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/black"
                android:hint="Comment"
                android:inputType="textMultiLine"
                android:padding="7dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/comment" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Save"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/commentValue" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</LinearLayout>