<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/SignupActivity"
    tools:context=".signup_login">

    <EditText
        android:id="@+id/fullname"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:hint="fullname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints">
    </EditText>

    <EditText
        android:id="@+id/email"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:hint="e-mail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints">
    </EditText>

    <EditText
        android:id="@+id/number"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:hint="mobile-number"
        android:maxLength="11"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints">
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:hint="password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints">
    </EditText>

    <Button
        android:id="@+id/signup"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="sign up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>

    <TextView
        android:textColor="@color/teal_700"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Do you have an account?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:id="@+id/login2"
        android:textColor="@color/teal_700"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

</androidx.appcompat.widget.LinearLayoutCompat>